<resources>
    <string name="app_name">LISTINGS</string>

    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_email_id">Email</string>
    <!-- OTP SCREEN ENTERIES-->
    <string name="OTP_description_text">OTP send on number \n12345</string>
    <!-- Update Password Screen-->
    <string name="update_password_title">UPDATE\nPASSWORD</string>
    <string name="new_credentials">Please enter new credentials</string>
    <string name="verified">VERIFIED\nENTER NEW PASSWORD</string>
    <string name="new_password_hint">NEW PASSWORD</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="update_new_enteries">UPDATE</string>
    <string name="credentials_updated">NEW\nCREDENTIALS\nUPDATED</string>
    <string name="credentials_updated_message">Please use new credentials to log in</string>
    <!-- Navigation Drawer String-->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>