<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Login_Signup.SetNewPassword"
    android:background="@color/yellow"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="42dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/update_password_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="55dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/new_credentials"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/verified"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="30dp"
            android:hint="@string/new_password_hint"
            android:id="@+id/newPassword"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColor="@color/black">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="23dp"
            android:hint="@string/confirm_password_hint"
            android:id="@+id/confirmPassword"
            app:boxBackgroundColor="@color/white"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColor="@color/black">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:text="@string/update_new_enteries"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="setNewPassword"></Button>

    </LinearLayout>

</ScrollView>