<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Login_Signup.ForgetPasswordUpdateSuccessfulMessageDisplay"
    android:background="@color/yellow"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="42dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:src="@drawable/back_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/credentials_updated"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/credentials_updated_message"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="callLoginScreen"/>

    </LinearLayout>

</LinearLayout>